--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hastebin",
+  "name": "hastebin-note",
   "version": "0.0.1",
   "description": "hastebin api",
   "main": "index.js",
