--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-hastebin",
-  "version": "0.0.1-beta",
+  "version": "1.0.0",
   "description": "hastebin api",
   "main": "index.js",
   "directories": {
